# test-ai-cluster

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dependabot  README.md  build-and-push.sh  pyproject.toml
app/: main.py
app/dependabot_agent/: __init__.py  __main__.py  agent.py  config.py  llm.py  prompts.py  tools.py
k8s/: dependabot-fix-job.yaml  github-token-secret.yaml  job.yaml  namespace.yaml  secret.yaml
tests/: conftest.py  test_agent.py  test_config.py  test_tools.py
